Introduce sreal::is_equal and use it in IPA inline checking (PR ipa/80597).

gcc/ChangeLog:

2017-05-12  Martin Liska  <mliska@suse.cz>

	PR ipa/80597
	* ipa-inline-analysis.c (compute_inline_parameters): Use
	sreal::is_equal function.
	* ipa-inline.c (edge_badness): Likewise.
	* sreal.c (sreal_verify_equal): New function.
	(void sreal_c_tests): Call new test.
	* sreal.h (sreal::is_equal): New function.